--- a/src/vercel.json
+++ b/src/vercel.json
@@ -10,6 +10,10 @@
     {
     "src": "/(.*)",
       "dest": "/"
+    },
+     "headers": [
+    {
+      "source": "/api/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
@@ -17,5 +21,6 @@
         { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
       ]
     }
+  ]
   ]
 }
