--- a/src/vercel.json
+++ b/src/vercel.json
@@ -6,7 +6,7 @@
       "use": "@vercel/node"
     }
   ],
-  "rewrites": [{ "source": "/(.*)", "destination": "/api" }],
+  "rewrites": [{ "source": "api/(.*)", "destination": "/api" }],
   "headers": [
     {
       "source": "/(.*)",
